# ch32-keyboard

./: .clang-format  .gitignore  CMakeLists.txt
.github/workflows/: build.yml
CherryUSB/core/: usbd_core.c
CherryUSB/port/fsdev/: ch32v20x_fsdev.c  usb_fsdev_reg.h
Core/: core_riscv.h
Ld/: Link.ld
Peripheral/inc/: ch32v20x.h
User/Inc/: usb_config.h  usb_hid_kbd.h
User/Src/: main.c  system_ch32v20x.c  usb_hid_kbd.c
